# hackatum2022

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  blinky.c  rpi-pico-tools.cmake
